test/compile_errors/err_comptime_bit_method_arity.w
//! expect-check-fail: rotate_left() expects exactly one argument

const BAD: u8 = comptime (1 as u8).rotate_left()

fn main:
    let _ = BAD
